--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b8743c39-483c-49f8-ad9b-219d0bcbf082"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
